// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrowserStack filterClientsByFormFactor should target specific form factor devices: Phones & Tablets 1`] = `
Array [
  "iOS 14 iPhone 12",
  "iOS 14 iPad Pro 12.9 2020",
  "iOS 13 iPhone 11 Pro",
  "iOS 13 iPad Air 2019",
  "iOS 12 iPhone XS",
  "iOS 12 iPad Air 2019",
  "Android 11.0 Google Pixel 4",
  "Android 10.0 Samsung Galaxy S20",
  "Android 10.0 Google Pixel 4",
  "Android 10.0 Samsung Galaxy Tab S10",
  "Android 9.0 Samsung Galaxy S10",
  "Android 9.0 Google Pixel 3",
  "Android 9.0 Samsung Galaxy Tab S6",
  "Android 8.0 Samsung Galaxy S9",
  "Android 8.0 Google Pixel 3",
  "Android 8.0 Samsung Galaxy Tab S4",
  "Android 7.0 Samsung Galaxy S8",
  "Android 7.0 Google Pixel",
  "Android 7.0 Samsung Galaxy Tab S3",
  "Android 6.0 Samsung Galaxy S7",
  "Android 6.0 Google Nexus 6",
]
`;

exports[`BrowserStack filterClientsByFormFactor should target specific form factor devices: Phones only 1`] = `
Array [
  "iOS 14 iPhone 12",
  "iOS 13 iPhone 11 Pro",
  "iOS 12 iPhone XS",
  "Android 11.0 Google Pixel 4",
  "Android 10.0 Samsung Galaxy S20",
  "Android 10.0 Google Pixel 4",
  "Android 9.0 Samsung Galaxy S10",
  "Android 9.0 Google Pixel 3",
  "Android 8.0 Samsung Galaxy S9",
  "Android 8.0 Google Pixel 3",
  "Android 7.0 Samsung Galaxy S8",
  "Android 7.0 Google Pixel",
  "Android 6.0 Samsung Galaxy S7",
  "Android 6.0 Google Nexus 6",
]
`;

exports[`BrowserStack filterClientsByFormFactor should target specific form factor devices: Tablets only 1`] = `
Array [
  "iOS 14 iPad Pro 12.9 2020",
  "iOS 13 iPad Air 2019",
  "iOS 12 iPad Air 2019",
  "Android 10.0 Samsung Galaxy Tab S10",
  "Android 9.0 Samsung Galaxy Tab S6",
  "Android 8.0 Samsung Galaxy Tab S4",
  "Android 7.0 Samsung Galaxy Tab S3",
]
`;

exports[`BrowserStack filterClientsByKeyboard should target specific keyboards: Apple & Google 1`] = `
Array [
  "iOS 14 iPhone 12",
  "iOS 14 iPad Pro 12.9 2020",
  "iOS 13 iPhone 11 Pro",
  "iOS 13 iPad Air 2019",
  "iOS 12 iPhone XS",
  "iOS 12 iPad Air 2019",
  "Android 11.0 Google Pixel 4",
  "Android 10.0 Google Pixel 4",
  "Android 9.0 Google Pixel 3",
  "Android 8.0 Google Pixel 3",
  "Android 7.0 Google Pixel",
  "Android 6.0 Google Nexus 6",
]
`;

exports[`BrowserStack filterClientsByKeyboard should target specific keyboards: Samsung only 1`] = `
Array [
  "Android 10.0 Samsung Galaxy S20",
  "Android 10.0 Samsung Galaxy Tab S10",
  "Android 9.0 Samsung Galaxy S10",
  "Android 9.0 Samsung Galaxy Tab S6",
  "Android 8.0 Samsung Galaxy S9",
  "Android 8.0 Samsung Galaxy Tab S4",
  "Android 7.0 Samsung Galaxy S8",
  "Android 7.0 Samsung Galaxy Tab S3",
  "Android 6.0 Samsung Galaxy S7",
]
`;

exports[`BrowserStack filterClientsByPlatform should skip entire platform: Android only 1`] = `
Array [
  "Android 11.0 Google Pixel 4",
  "Android 10.0 Samsung Galaxy S20",
  "Android 10.0 Google Pixel 4",
  "Android 10.0 Samsung Galaxy Tab S10",
  "Android 9.0 Samsung Galaxy S10",
  "Android 9.0 Google Pixel 3",
  "Android 9.0 Samsung Galaxy Tab S6",
  "Android 8.0 Samsung Galaxy S9",
  "Android 8.0 Google Pixel 3",
  "Android 8.0 Samsung Galaxy Tab S4",
  "Android 7.0 Samsung Galaxy S8",
  "Android 7.0 Google Pixel",
  "Android 7.0 Samsung Galaxy Tab S3",
  "Android 6.0 Samsung Galaxy S7",
  "Android 6.0 Google Nexus 6",
]
`;

exports[`BrowserStack filterClientsByPlatform should skip entire platform: iOS only 1`] = `
Array [
  "iOS 14 iPhone 12",
  "iOS 14 iPad Pro 12.9 2020",
  "iOS 13 iPhone 11 Pro",
  "iOS 13 iPad Air 2019",
  "iOS 12 iPhone XS",
  "iOS 12 iPad Air 2019",
]
`;

exports[`BrowserStack filterClientsByPlatformVersion should target specific versions 1`] = `
Array [
  "iOS 12 iPhone XS",
  "iOS 12 iPad Air 2019",
  "Android 9.0 Samsung Galaxy S10",
  "Android 9.0 Google Pixel 3",
  "Android 9.0 Samsung Galaxy Tab S6",
]
`;
